--- a/vignettes/articles/hector_apply.Rmd
+++ b/vignettes/articles/hector_apply.Rmd
@@ -39,8 +39,7 @@ make the target concentration value 1820 ppbv CH$_4$ (a bit higher than the year
 2000 value in the baseline scenario).
 
 ```{r targfn.init}
-f <- function(emiss)
-{
+f <- function(emiss) {
     setvar(hcore, 2000:2100, EMISSIONS_CH4(), emiss, "Tg CH4")
     reset(hcore, 1999)
     run(hcore, 2100)
@@ -58,7 +57,7 @@ guess is, so long as it isn't something so large that it will cause the model to
 fail outright.  We will use a constant 300 Tg CH$_4$ as the initial guess.
 
 ```{r solve}
-x <- rep(300.0, times=101)  # 2000:2001 includes both endpoints
+x <- rep(300.0, times = 101)  # 2000:2001 includes both endpoints
 slv <- nleqslv::nleqslv(x, f, method = "Broyden")
 ```
 
